-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 14
-
Component/s: security-libs
-
b15
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8241418 | 13.0.3 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
| JDK-8231576 | 11.0.6 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
The Java_sun_security_pkcs11_wrapper_PKCS11_connect in p11_md.c misses a call to ReleaseStringUTFChars in a special case.
- backported by
-
JDK-8231576 missing ReleaseStringUTFChars in Java_sun_security_pkcs11_wrapper_PKCS11_connect
-
- Resolved
-
-
JDK-8241418 missing ReleaseStringUTFChars in Java_sun_security_pkcs11_wrapper_PKCS11_connect
-
- Resolved
-